tautulli/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
  labels:
    app.kubernetes.io/name: tautulli
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: tautulli
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tautulli
    spec:
      containers:
      - name: tautulli
        image: ghcr.io/linuxserver/tautulli
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8181
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 60
        readinessProbe:
          httpGet:
            path: /
            port: http
        resources:
          limits:
            cpu: 500m
            memory: 600Mi
          requests:
            cpu: 100m
            memory: 300Mi
        volumeMounts:
        - mountPath: /config
          name: config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: tautulli-config
