tautulli/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  labels:
    app.kubernetes.io/name: tautulli
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: tautulli
  type: ClusterIP
