tautulli/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tautulli
  labels:
    app.kubernetes.io/name: tautulli
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`db3000.xmple.io`) && PathPrefix(`/tautulli/`)
      kind: Rule
      services:
        - name: tautulli
          port: 80
      middlewares:
        - name: forwardauth-authelia
          namespace: authelia
  tls:
    secretName: db3000-tls
    options:
      name: mintls13
      namespace: traefik
